--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/fmt"]
 	path = libs/fmt
 	url = https://github.com/fmtlib/fmt.git
+[submodule "libs/DirectXMath"]
+	path = libs/DirectXMath
+	url = https://github.com/microsoft/DirectXMath.git
