moved folders around, imgui works! but image layout errors..will fix soon

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,15 @@
-[submodule "libs/vk-bootstrap"]
-	path = libs/vk-bootstrap
+[submodule "3rdParty/vk-bootstrap"]
+	path = 3rdParty/vk-bootstrap
 	url = https://github.com/charles-lunarg/vk-bootstrap
-[submodule "libs/fmt"]
-	path = libs/fmt
+[submodule "3rdParty/fmt"]
+	path = 3rdParty/fmt
 	url = https://github.com/fmtlib/fmt.git
-[submodule "libs/DirectXMath"]
-	path = libs/DirectXMath
+[submodule "3rdParty/DirectXMath"]
+	path = 3rdParty/DirectXMath
 	url = https://github.com/microsoft/DirectXMath.git
+[submodule "3rdParty/sdl"]
+	path = 3rdParty/sdl
+	url = https://github.com/libsdl-org/SDL.git
+[submodule "3rdParty/imgui"]
+	path = 3rdParty/imgui
+	url = https://github.com/ocornut/imgui.git
