--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "libs/3rdParty/glm"]
 	path = libs/3rdParty/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "libs/3rdParty/fastgltf"]
+	path = libs/3rdParty/fastgltf
+	url = https://github.com/spnda/fastgltf.git
