--- a/.github/workflows/cmake-windows-platform.yml
+++ b/.github/workflows/cmake-windows-platform.yml
@@ -18,29 +18,33 @@ jobs:
         build_type: [Release, Debug]
 
     steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: true
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
 
-    - name: VulkanCI
-      uses: NcStudios/VulkanCI@v1.1
-      with:
-        sdkVersion: 1.3.283.0  # Specify the Vulkan SDK version you want to use
-        installPath: ${{ github.workspace }}/VulkanSDK # Set the install path for Vulkan
+      - name: VulkanCI
+        uses: NcStudios/VulkanCI@v1.1
+        with:
+          sdkVersion: 1.3.283.0
+          installPath: ${{ github.workspace }}/VulkanSDK
 
-    - name: Set up Vulkan SDK
-      run: |
-        echo "Setting up Vulkan SDK environment"
-        echo "${{ github.workspace }}/VulkanSDK/1.3.283.0/Environment" >> $GITHUB_ENV
+      - name: Set up Vulkan SDK
+        run: |
+          echo "Setting up Vulkan SDK environment"
+          echo "${{ github.workspace }}/VulkanSDK/1.3.283.0/Environment" >> $GITHUB_ENV
 
-    - name: Set up CMake
-      uses: lukka/get-cmake@v3.30.1
-      with:
-        cmakeVersion: latest
-        ninjaVersion: latest
+      - name: Set up CMake
+        uses: lukka/get-cmake@v3.30.1
+        with:
+          cmakeVersion: latest
+          ninjaVersion: latest
 
-    - name: Configure CMake
-      run: cmake -B build -DCMAKE_BUILD_TYPE=${{matrix.build_type}}
+      - name: Update submodules
+        run: git submodule update --init --recursive
 
-    - name: Build
-      run: cmake --build build --config ${{matrix.build_type}}
+      - name: Configure CMake
+        run: |
+          cmake -B build -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DVULKAN_SDK="${{ github.workspace }}/VulkanSDK/1.3.283.0"
+
+      - name: Build
+        run: cmake --build build --config ${{ matrix.build_type }}
