--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "libs/3rdParty/tracy"]
 	path = libs/3rdParty/tracy
 	url = https://github.com/wolfpld/tracy.git
+[submodule "libs/3rdParty/sdl3"]
+	path = libs/3rdParty/sdl3
+	url = https://github.com/libsdl-org/SDL.git
